# ex2_mitkadem

./: AnomalyDetector.h  CMakeLists.txt  MainTrain.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  timeseries.cpp  timeseries.h
